get cards working, correctly!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <header class="jumbotron">
+    <header id="jumbotron" class="jumbotron">
         <h1 class="display-3">
             <span>
                 <img style="height: 60px; width: 80px;" class="mb-2" src="./assets/images/tempest.png" />
@@ -81,18 +81,18 @@
                 <div class="col-8" id="city-grid">
                     <div class="row">
                         <div class="col-12 two-div city-result">
-                            <div id="title-holder">
+                            <div id="title-holder" class="d-flex align-items-center">
                                 <h2 id="city-name"> </h2>
                                 <div id="weather-icon-holder">
                                     <img id="city-icon" src="" />
                                 </div>
-                                <h4 id="city-loc"></h3>
                             </div>
+                            <h4 id="city-loc"></h4>
                             <div id="deets-holder">
                                 <div id="temp-result"></div>
                                 <div id="wind-result"></div>
                                 <div id="humidity-result"></div>
-                                <div id="uv-label-result"></div>
+                                <div id="uv-result"></div>
                             </div>
                         </div>
                         <div id="weather-grid" class="col-12 two-div">
@@ -103,48 +103,48 @@
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <article id="weather-card" class="weather-card">
-                                        <p id="card-date">date</p>
-                                        <p id="card-icon">icon</p>
-                                        <p id="card-temp">temp</p>
-                                        <p id="card-wind">wind</p>
-                                        <p id="card-humidity">humidity</p>
+                                    <article id="weather-card-1" class="weather-card">
+                                        <p id="card-date-1"></p>
+                                        <img id="card-icon-1" src="" alt="weather icon"></p>
+                                        <p id="card-temp-1"></p>
+                                        <p id="card-wind-1"></p>
+                                        <p id="card-humidity-1"></p>
                                     </article>
                                 </div>
                                 <div class="col">
-                                    <article id="weather-card" class="weather-card">
-                                        <p id="card-date">date</p>
-                                        <p id="card-icon">icon</p>
-                                        <p id="card-temp">temp</p>
-                                        <p id="card-wind">wind</p>
-                                        <p id="card-humidity">humidity</p>
+                                    <article id="weather-card-2" class="weather-card">
+                                        <p id="card-date-2">1</p>
+                                        <img id="card-icon-2" src="" alt="weather icon"></p>
+                                        <p id="card-temp-2">1</p>
+                                        <p id="card-wind-2">1</p>
+                                        <p id="card-humidity-2">1</p>
                                     </article>
                                 </div>
                                 <div class="col">
-                                    <article id="weather-card" class="weather-card">
-                                        <p id="card-date">date</p>
-                                        <p id="card-icon">icon</p>
-                                        <p id="card-temp">temp</p>
-                                        <p id="card-wind">wind</p>
-                                        <p id="card-humidity">humidity</p>
+                                    <article id="weather-card-3" class="weather-card">
+                                        <p id="card-date-3"></p>
+                                        <img id="card-icon-3" src="" alt="weather icon"></p>
+                                        <p id="card-temp-3"></p>
+                                        <p id="card-wind-3"></p>
+                                        <p id="card-humidity-3"></p>
                                     </article>
                                 </div>
                                 <div class="col">
-                                    <article id="weather-card" class="weather-card">
-                                        <p id="card-date">date</p>
-                                        <p id="card-icon">icon</p>
-                                        <p id="card-temp">temp</p>
-                                        <p id="card-wind">wind</p>
-                                        <p id="card-humidity">humidity</p>
+                                    <article id="weather-card-4" class="weather-card">
+                                        <p id="card-date-4"></p>
+                                        <img id="card-icon-4" src="" alt="weather icon"></p>
+                                        <p id="card-temp-4"></p>
+                                        <p id="card-wind-4"></p>
+                                        <p id="card-humidity-4"></p>
                                     </article>
                                 </div>
                                 <div class="col">
-                                    <article id="weather-card" class="weather-card">
-                                        <p id="card-date">date</p>
-                                        <p id="card-icon">icon</p>
-                                        <p id="card-temp">temp</p>
-                                        <p id="card-wind">wind</p>
-                                        <p id="card-humidity">humidity</p>
+                                    <article id="weather-card-5" class="weather-card">
+                                        <p id="card-date-5"></p>
+                                        <img id="card-icon-5" src="" alt="weather icon"></p>
+                                        <p id="card-temp-5"></p>
+                                        <p id="card-wind-5"></p>
+                                        <p id="card-humidity-5"></p>
                                     </article>
                                 </div>
                             </div>
