everything works, hurray

--- a/index.html
+++ b/index.html
@@ -49,32 +49,17 @@
                             </div>
                         </div>
                         <div class="col-12 two-div" id="history-grid">
-                            <h2 class="history-box">
-                                <div class="row d-flex justify-content-center mt-1 mb-1">
-                                    <button id="search-1" class="p-3 btn btn-secondary hist-button">search-1</button>
-                                </div>
-                                <div class="row d-flex justify-content-center mb-1">
-                                    <button id="search-2" class="p-3 btn btn-secondary hist-button">search-2</button>
-                                </div>
-                                <div class="row d-flex justify-content-center mb-1">
-                                    <button id="search-3" class="p-3 btn btn-secondary hist-button">search-3</button>
-                                </div>
-                                <div class="row d-flex justify-content-center mb-1">
-                                    <button id="search-4" class="p-3 btn btn-secondary hist-button">search-4</button>
-                                </div>
-                                <div class="row d-flex justify-content-center mb-1">
-                                    <button id="search-5" class="p-3 btn btn-secondary hist-button">search-5</button>
-                                </div>
-                                <div class="row d-flex justify-content-center mb-1">
-                                    <button id="search-6" class="p-3 btn btn-secondary hist-button">search-6</button>
-                                </div>
-                                <div class="row d-flex justify-content-center mb-1">
-                                    <button id="search-7" class="p-3 btn btn-secondary hist-button">search-7</button>
-                                </div>
-                                <div class="row d-flex justify-content-center mb-1">
-                                    <button id="search-8" class="p-3 btn btn-secondary hist-button">search-8</button>
-                                </div>
-                            </h2>
+                            <div class="row text-center" id="history-title">
+                                <h2 class="history-title"> History </h2>
+                            </div>
+                            <div class="row d-flex justify-content-center mt-1 mb-1" id="history-entries">
+                                <ul class="list-group list-flush" id="history-list">
+                                </ul>
+                            </div>
+                            <div class="row d-flex justify-content-center mt-1 mb-1">
+                                <button id="clear-history" class="p-3 btn btn-danger clear-button">Delete
+                                    History</button>
+                            </div>
                         </div>
                     </div>
                 </div>
