add more styling

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             </h2>
                             <div class="input-group mb-3">
                                 <input id="search-input" type="text" class="form-control" placeholder="Enter a city..."
-                                    aria-label="City to search for" aria-describedby="search-button"></input>
+                                    aria-label="City to search for" aria-described-by="search-button"></input>
                                 <div class="input-group-append">
                                     <button id="search-button" type="button"
                                         class="btn btn-outline-secondary">Search</button>
